relative image URLs for amp-images

--- a/src-markdown/blog/2011-02-10-gday-mate.md
+++ b/src-markdown/blog/2011-02-10-gday-mate.md
@@ -14,9 +14,9 @@ It contained the [CSS Awwwards book](http://www.thecssawards.com/blog/best-css-w
 
 I also learned today that I'm Australian! I had no idea, my [home page](http://dbushell.com) says I'm from the UK. Oh well guess I can't complain, I will learn to embrace my new heritage.
 
-![Awwwards Book](http://dbushell.com/wp-content/uploads/2011/02/cssbook1.jpg)
+![Awwwards Book](/wp-content/uploads/2011/02/cssbook1.jpg)
 
-![Awwwards Book - David Bushell](http://dbushell.com/wp-content/uploads/2011/02/cssbook2.jpg)
+![Awwwards Book - David Bushell](/wp-content/uploads/2011/02/cssbook2.jpg)
 
 Better photos to come when I have more than my iPhone at hand.
 
