--- a/src-markdown/blog/2013-02-04-a-new-home.md
+++ b/src-markdown/blog/2013-02-04-a-new-home.md
@@ -12,7 +12,7 @@ Welcome to my new website. I haven't rebranded entirely — what you see bears 
 
 This site now represents my [web design](/responsive-design/) and [front-end development](/front-end-development/) services. It's heavily content-centric in design. And responsive, of course! It has a newfound simplicity. That's not a compromise; in fact, efforts to that effect have improved the experience across a wider range of devices and browsers. There's still much testing and perfecting to do but what better environment is there than a live server?
 
-{%p class="post__image"%}![My new website design](http://dbushell.com/wp-content/uploads/2013/02/front-end-development.png){%/p%}
+{%p class="post__image"%}![My new website design](/wp-content/uploads/2013/02/front-end-development.png){%/p%}
 
 
 
